feat: developed personal answer structure and edited the services